--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -1,4 +1,3 @@
-
 name: Continuous Integration
 
 on:
@@ -15,14 +14,16 @@ jobs:
         node-version: [20.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name : Test Customer Service
+    - name: Test Customer Service
       working-directory: ./customer
-      run:
+      run: |
         npm ci
         npm test
