--- a/.github/workflows/CI_Workflow.yml
+++ b/.github/workflows/CI_Workflow.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -23,6 +23,16 @@ jobs:
 
       - name: Test Customer Service
         working-directory: ./customer
+        run: |
+          npm ci
+          npm test
+      - name: Test Products Service
+        working-directory: ./products
+        run: |
+          npm ci
+          npm test
+      - name: Test Shopping Service
+        working-directory: ./shopping
         run: |
           npm ci
           npm test
