--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -52,12 +52,12 @@ jobs:
           zip -r deploy.zip . -x '*.git'
       
       - name: Deploy on Elastic beanstalk QA Env
-        uses: einaregilsson/beanstalk-deploy@v20
+        uses: einaregilsson/beanstalk-deploy@v22
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: sd-app-2
-          environment_name: Sd-app-2-env
+          application_name: qa-node-microservice
+          environment_name: Qa-node-microservice-env
           version_label: "ver-${{ github.sha }}"
           region: ap-south-1
           deployment_package: deploy.zip
