--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -58,7 +58,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: sd-qa-node-app
           environment_name: Sd-qa-node-app-env
-          version_label: "ver-${{ github.sha }}"
+          version_label: 1.0
           region: ap-south-1
           deployment_package: deploy.zip
 
