feat: docker file configuration change

--- a/products/.env.dev
+++ b/products/.env.dev
@@ -1,7 +1,7 @@
 APP_SECRET="sd"
 
 # Mongo DB
-MONGODB_URI='mongodb://nosql-db:27017/shop-ms-products'
+MONGODB_URI='mongodb+srv://sd19941508:fPTCWWCCx0PNytGm@cluster0.0dqfqgm.mongodb.net/shop-ms-products'
 
 # Port
 PORT=8002
