--- a/shopping/.env.dev
+++ b/shopping/.env.dev
@@ -1,7 +1,7 @@
 APP_SECRET="sd"
 
 # Mongo DB
-MONGODB_URI='mongodb://nosql-db:27017/shop-ms-shopping'
+MONGODB_URI='mongodb+srv://sd19941508:fPTCWWCCx0PNytGm@cluster0.0dqfqgm.mongodb.net/shop-ms-shopping'
 
 # Port
 PORT=8003
