--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -47,6 +47,20 @@ jobs:
           echo PORT=8003 >> .env
           cat .env
           
+      - name: Generate deployment package
+        run: |
+          zip -r deploy.zip . -x '*.git'
+      
+      - name: Deploy on Elastic beanstalk QA Env
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: youtube-ms
+          environment_name: Youtubems-env
+          version_label: "ver-${{ github.sha }}"
+          region: us-east-1
+          deployment_package: deploy.zip
 
       
         
