--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -9,6 +9,12 @@ http {
         listen 80;
         charset utf-8;
 
+        # Handle CORS for all locations
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+
         location / {
             proxy_pass http://products:8002;
             proxy_http_version 1.1;
@@ -37,7 +43,5 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-    
-
     }
 }
