--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -18,12 +18,12 @@ http {
             proxy_cache_bypass $http_upgrade;
             
             # CORS configuration
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
             add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
                 add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
                 return 204;
@@ -40,12 +40,12 @@ http {
             proxy_cache_bypass $http_upgrade;
 
             # CORS configuration
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
             add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
                 add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
                 return 204;
@@ -62,12 +62,12 @@ http {
             proxy_cache_bypass $http_upgrade;
 
             # CORS configuration
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
             add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
                 add_header 'Access-Control-Allow-Headers' 'X-Requested-With, Content-Type, Authorization';
                 return 204;
